--- a/CentOS7/Graphite/Vagrantfile
+++ b/CentOS7/Graphite/Vagrantfile
@@ -1,12 +1,11 @@
 Vagrant.configure(2) do |config|
 
   config.vm.provider 'virtualbox' do |vm|
-    vm.linked_clone = true
     vm.memory = 1024
   end
   config.vm.box = "centos/7"
-  config.vm.hostname = "nginx01.lafeberhof.nl"
-  config.vm.network "private_network", ip: "10.0.0.150", netmask: "255.255.255.0", virtualbox_intnet: "nginx_network"
+  config.vm.hostname = "graphite01.lafeberhof.nl"
+  config.vm.network "private_network", ip: "10.0.0.100", netmask: "255.255.255.0", virtualbox_intnet: "graphite_network"
   config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", guest: 443, host: 8443
   config.vm.provision "shell", path: "Provision.sh"
