--- a/CentOS7/Redis/Vagrantfile
+++ b/CentOS7/Redis/Vagrantfile
@@ -8,5 +8,5 @@ Vagrant.configure(2) do |config|
   config.vm.hostname = "redis01"
   config.vm.network "private_network", ip: "10.0.0.130", netmask: "255.255.255.0", virtualbox_intnet: "redis_network"
   config.vm.provision "shell", path: "Provision.sh"
-
+  config.vm.network "forwarded_port", guest: 5672, host: 5672
 end
