--- a/CentOS7/Redis/Vagrantfile
+++ b/CentOS7/Redis/Vagrantfile
@@ -4,9 +4,26 @@ Vagrant.configure(2) do |config|
     vm.memory = 1024
   end
 
-  config.vm.box = "centos/7"
-  config.vm.hostname = "redis01"
-  config.vm.network "private_network", ip: "10.0.0.130", netmask: "255.255.255.0", virtualbox_intnet: "redis_network"
-  config.vm.provision "shell", path: "Provision.sh"
-  config.vm.network "forwarded_port", guest: 5672, host: 5672
+  config.vm.define "Redis01" do |r1|
+   r1.vm.box = "centos/7"
+   r1.vm.hostname = "redis01"
+   r1.vm.network "private_network", ip: "10.0.0.151", netmask: "255.255.255.0", virtualbox_intnet: "redis_network"
+   r1.vm.provision "shell", path: "Provision.sh"
+  end
+
+  config.vm.define "Redis02" do |r2|
+   r2.vm.box = "centos/7"
+   r2.vm.hostname = "redis02"
+   r2.vm.network "private_network", ip: "10.0.0.152", netmask: "255.255.255.0", virtualbox_intnet: "redis_network"
+   r2.vm.provision "shell", path: "Provision.sh"
+  end
+
+  config.vm.define "Redis03" do |r3|
+   r3.vm.box = "centos/7"
+   r3.vm.hostname = "redis03"
+   r3.vm.network "private_network", ip: "10.0.0.153", netmask: "255.255.255.0", virtualbox_intnet: "redis_network"
+   r3.vm.provision "shell", path: "Provision.sh"
+  end
+
+
 end
