--- a/CentOS7/Redis/Vagrantfile
+++ b/CentOS7/Redis/Vagrantfile
@@ -2,6 +2,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.provider 'virtualbox' do |vm|
     vm.memory = 1024
+    vm.linked_clone = true
   end
 
   config.vm.define "Redis01" do |r1|
