More Cluster like config

--- a/Alpine/Dev/Vagrantfile
+++ b/Alpine/Dev/Vagrantfile
@@ -1,6 +1,6 @@
-cluster = [ { :name => "dev-host01", :ip => "10.0.0.11" },
-            { :name => "dev-host02", :ip => "10.0.0.12" },
-            { :name => "dev-host03", :ip => "10.0.0.13" } ]
+cluster = [ { :name => "dev-host01", :ip => "10.0.0.11", :net => "dev.net" },
+            { :name => "dev-host02", :ip => "10.0.0.12", :net => "dev.net" },
+            { :name => "dev-host03", :ip => "10.0.0.13", :net => "dev.net" } ]
 
 Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
@@ -10,10 +10,10 @@ Vagrant.configure("2") do |config|
  end
  config.vm.box = "Alpine"
  config.vm.synced_folder '.', '/vagrant', disabled: true
- cluster.each do |opts|
-    config.vm.define opts[:name] do |config|
-    config.vm.hostname = opts[:name]
-    config.vm.network "private_network", ip: opts[:ip], netmask: "255.255.255.0", virtualbox_intnet: "dev.net"
+ cluster.each do |node|
+    config.vm.define node[:name] do |config|
+    config.vm.hostname = node[:name]
+    config.vm.network "private_network", ip: node[:ip], netmask: "255.255.255.0", virtualbox_intnet: node[:net] 
     config.vm.provision "ansible", playbook: "Provision.yml"
     end
  end
