--- a/Alpine/PowerDNS/Vagrantfile
+++ b/Alpine/PowerDNS/Vagrantfile
@@ -1,17 +1,21 @@
-Vagrant.configure(2) do |config|
+cluster = [ { :name => "powerdns01", :ip => "10.0.0.11" , :net => "powerdns.net"},
+            { :name => "powerdns02", :ip => "10.0.0.12" , :net => "powerdns.net"},
+            { :name => "powerdns03", :ip => "10.0.0.13" , :net => "powerdns.net"} ]
 
-  config.vm.synced_folder '.', '/vagrant', disabled: true
+Vagrant.configure("2") do |config|
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 1024
+    vb.cpus = 1
+    vb.linked_clone = true
+ end
 
-  config.vm.provider 'virtualbox' do |vm|
-    vm.memory = 1024
-    vm.linked_clone = true
-  end
-
-  config.vm.define "powerdns" do |d1|
-    d1.vm.box = "AlpinePlus"
-    d1.vm.hostname = "powerdns"
-    d1.vm.network "private_network", ip: "10.0.0.101", netmask: "255.255.255.0", virtualbox_intnet: "alpine_network"
-    d1.vm.provision "ansible", playbook: "Provision.yml"
-  end
-
+ config.vm.box = "Alpine"
+ config.vm.synced_folder '.', '/vagrant', disabled: true
+ cluster.each do |node|
+    config.vm.define node[:name] do |config|
+      config.vm.hostname = node[:name]
+      config.vm.network "private_network", ip: node[:ip], netmask: "255.255.255.0", virtualbox_intnet: node[:net]
+      config.vm.provision "ansible", playbook: "Provision.yml"
+    end
+ end
 end
