--- a/Alpine/PostgreSQL/Vagrantfile
+++ b/Alpine/PostgreSQL/Vagrantfile
@@ -1,6 +1,5 @@
-cluster = [ { :name => "postgresql01", :ip => "10.0.0.11" , :net => "postgresql.net"},
-            { :name => "postgresql02", :ip => "10.0.0.12" , :net => "postgresql.net"},
-            { :name => "postgresql03", :ip => "10.0.0.13" , :net => "postgresql.net"} ]
+cluster = [ { :name => "dev-postgresql-01", :ip => "10.0.0.11" , :net => "dev.net"},
+            { :name => "dev-postgresql-02", :ip => "10.0.0.12" , :net => "dev.net"} ]
 
 Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
