--- a/Alpine/PostgreSQL/Provision.yml
+++ b/Alpine/PostgreSQL/Provision.yml
@@ -2,9 +2,9 @@
 - hosts: dev-postgresql-01
   become: true
   roles:
-    - { role: alpine_postgresql, pg_db_name: test, pg_db_user: testuser, pg_db_pass: testpass }
+    - { role: alpine_postgresql, primary: true, pg_db_name: test, pg_db_user: testuser, pg_db_pass: testpass }
 - hosts: dev-postgresql-02
   become: true
   roles:
-    - { role: alpine_postgresql, pg_db_name: test, pg_db_user: testuser, pg_db_pass: testpass }
+    - { role: alpine_postgresql, standby: true }
 ...
