--- a/Alpine/PostgreSQL/roles/alpine_postgresql/tasks/main.yml
+++ b/Alpine/PostgreSQL/roles/alpine_postgresql/tasks/main.yml
@@ -20,8 +20,8 @@
 
 - name: Create Replication User (primary)
   postgresql_user:
-    name: repl 
-    password: repl
+    name: "{{ pg_repl_user }}"
+    password: "{{ pg_repl_pass }}"
     role_attr_flags: REPLICATION
   when: primary is defined
 
@@ -36,12 +36,12 @@
     db: "{{ pg_db_name }}"
     name: "{{ pg_db_user }}"
     password: "{{ pg_db_pass }}"
-    priv: "ALL"
+    priv: "{{ pg_db_priv }}"
   when: standby is undefined
 
 - name: Create archive dir
   file:
-    dest: /var/lib/postgresql/9.6/data/archive
+    dest: "{{ pg_data_dir }}/archive"
     state: directory
     mode: 0755
     owner: postgres
@@ -50,80 +50,85 @@
 
 - name: Allow Replication user to connect from standby
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/pg_hba.conf'
-    line: 'host     replication     repl         10.0.0.12/32        md5'
+    dest: "{{ pg_data_dir }}/pg_hba.conf"
+    line: 'host     replication     {{ pg_repl_user }}         10.0.0.12/32        md5'
   when: primary is defined
 
 - name: Change listen_addresses
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/postgresql.conf'
+    dest: "{{ pg_data_dir }}/postgresql.conf"
     regexp: '.*listen_addresses =.*'
-    line: "listen_addresses = '*'"
-  when: primary is defined
+    line: "listen_addresses = {{ pg_listen_addr }}"
+  notify: Reload postgresql
 
 - name: Change wal_level to replica
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/postgresql.conf'
+    dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*wal_level =.*'
     line: 'wal_level = replica'
   when: primary is defined
+  notify: Restart postgresql
 
 - name: Change archive_mode to on
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/postgresql.conf'
+    dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*archive_mode =.*'
     line: 'archive_mode = on'
   when: primary is defined
+  notify: Restart postgresql
 
 - name: Change archive_command 
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/postgresql.conf'
+    dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*archive_command =.*'
-    line: "archive_command = 'test ! -f /var/lib/postgresql/9.6/data/archive/%f && cp %p /var/lib/postgresql/9.6/data/archive/%f'"
+    line: "archive_command = 'test ! -f {{ pg_data_dir }}/archive/%f && cp %p {{ pg_data_dir }}/%f'"
   when: primary is defined
+  notify: Restart postgresql
 
 - name: Change max_wal_senders
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/postgresql.conf'
+    dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*max_wal_senders =.*'
     line: 'max_wal_senders = 3'
   when: primary is defined
+  notify: Restart postgresql
 
 - name: Change hot_standby
   lineinfile:
-    dest: '/var/lib/postgresql/9.6/data/postgresql.conf'
+    dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*hot_standby =.*'
     line: 'hot_standby = on'
   when: primary is defined
   notify: Restart postgresql
 
-- stat: path=/var/lib/postgresql/9.6/data/recover.conf
+- stat: path={{ pg_data_dir }}/recovery.conf
   register: standby_active
+  when: standby is defined
 
 - name: Prepare standby
   file:
-    dest: /var/lib/postgresql/9.6/data/  
+    dest: '{{ pg_data_dir }}'
     state: absent
   when: 
     - standby is defined
-    - standby_active.stat.isfile is undefined
+    - standby_active.stat.isreg is undefined
 
 - name: Create data dir
   file:
-    dest: /var/lib/postgresql/9.6/data
+    dest: '{{ pg_data_dir }}'
     state: directory
     mode: 0700
     owner: postgres
     group: postgres
   when: 
-    - standby_active.stat.isfile is undefined
     - standby is defined
+    - standby_active.stat.isreg is undefined
 
 - name: Sync data directory from primary
-  command: su - postgres -c 'PGPASSWORD=repl pg_basebackup -h 10.0.0.11 -D /var/lib/postgresql/9.6/data -U repl -w -v -P --xlog-method=stream -R'
+  command: su - postgres -c 'PGPASSWORD=repl pg_basebackup -h 10.0.0.11 -D {{ pg_data_dir }} -U repl -w -v -P --xlog-method=stream -R'
   when: 
-    - standby_active.stat.isfile is undefined
     - standby is defined
+    - standby_active.stat.isreg is undefined
 
 - name: Start PostgreSQL
   service:
