--- a/Alpine/PostgreSQL/roles/alpine_postgresql/tasks/main.yml
+++ b/Alpine/PostgreSQL/roles/alpine_postgresql/tasks/main.yml
@@ -16,20 +16,20 @@
     name: postgresql
     state: started
     enabled: true
-  when: standby is undefined
+  when: pg_standby is undefined
 
 - name: Create Replication User (primary)
   postgresql_user:
     name: "{{ pg_repl_user }}"
     password: "{{ pg_repl_pass }}"
     role_attr_flags: REPLICATION
-  when: primary is defined
+  when: pg_primary is defined
 
 - name: Create PostgreSQL Database {{ pg_db_name }} with encoding {{ pg_db_encoding }}
   postgresql_db:
     name: "{{ pg_db_name }}"
     encoding: "{{ pg_db_encoding }}"
-  when: standby is undefined
+  when: pg_standby is undefined
 
 - name: Create PostgreSQL User {{ pg_db_user }} of {{ pg_db_name }}
   postgresql_user:
@@ -37,7 +37,7 @@
     name: "{{ pg_db_user }}"
     password: "{{ pg_db_pass }}"
     priv: "{{ pg_db_priv }}"
-  when: standby is undefined
+  when: pg_standby is undefined
 
 - name: Create archive dir
   file:
@@ -46,27 +46,20 @@
     mode: 0755
     owner: postgres
     group: postgres
-  when: primary is defined
+  when: pg_primary is defined
 
 - name: Allow Replication user to connect from standby
   lineinfile:
     dest: "{{ pg_data_dir }}/pg_hba.conf"
-    line: 'host     replication     {{ pg_repl_user }}         10.0.0.12/32        md5'
-  when: primary is defined
-
-- name: Change listen_addresses
-  lineinfile:
-    dest: "{{ pg_data_dir }}/postgresql.conf"
-    regexp: '.*listen_addresses =.*'
-    line: "listen_addresses = {{ pg_listen_addr }}"
-  notify: Reload postgresql
+    line: 'host     replication     {{ pg_repl_user }}         {{ pg_standby_addr }}/32        md5'
+  when: pg_primary is defined
 
 - name: Change wal_level to replica
   lineinfile:
     dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*wal_level =.*'
     line: 'wal_level = replica'
-  when: primary is defined
+  when: pg_primary is defined
   notify: Restart postgresql
 
 - name: Change archive_mode to on
@@ -74,7 +67,7 @@
     dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*archive_mode =.*'
     line: 'archive_mode = on'
-  when: primary is defined
+  when: pg_primary is defined
   notify: Restart postgresql
 
 - name: Change archive_command 
@@ -82,7 +75,7 @@
     dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*archive_command =.*'
     line: "archive_command = 'test ! -f {{ pg_data_dir }}/archive/%f && cp %p {{ pg_data_dir }}/%f'"
-  when: primary is defined
+  when: pg_primary is defined
   notify: Restart postgresql
 
 - name: Change max_wal_senders
@@ -90,7 +83,7 @@
     dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*max_wal_senders =.*'
     line: 'max_wal_senders = 3'
-  when: primary is defined
+  when: pg_primary is defined
   notify: Restart postgresql
 
 - name: Change hot_standby
@@ -98,19 +91,19 @@
     dest: '{{ pg_data_dir }}/postgresql.conf'
     regexp: '.*hot_standby =.*'
     line: 'hot_standby = on'
-  when: primary is defined
+  when: pg_primary is defined
   notify: Restart postgresql
 
 - stat: path={{ pg_data_dir }}/recovery.conf
   register: standby_active
-  when: standby is defined
+  when: pg_standby is defined
 
 - name: Prepare standby
   file:
     dest: '{{ pg_data_dir }}'
     state: absent
   when: 
-    - standby is defined
+    - pg_standby is defined
     - standby_active.stat.isreg is undefined
 
 - name: Create data dir
@@ -121,20 +114,27 @@
     owner: postgres
     group: postgres
   when: 
-    - standby is defined
+    - pg_standby is defined
     - standby_active.stat.isreg is undefined
 
 - name: Sync data directory from primary
-  command: su - postgres -c 'PGPASSWORD=repl pg_basebackup -h 10.0.0.11 -D {{ pg_data_dir }} -U repl -w -v -P --xlog-method=stream -R'
+  command: su - postgres -c 'PGPASSWORD=repl pg_basebackup -h {{ pg_primary_addr }} -D {{ pg_data_dir }} -U repl -w -v -P --xlog-method=stream -R'
   when: 
-    - standby is defined
+    - pg_standby is defined
     - standby_active.stat.isreg is undefined
+
+- name: Change listen_addresses
+  lineinfile:
+    dest: "{{ pg_data_dir }}/postgresql.conf"
+    regexp: '.*listen_addresses =.*'
+    line: "listen_addresses = {{ pg_listen_addr }}"
+  notify: Restart postgresql
 
 - name: Start PostgreSQL
   service:
     name: postgresql
     state: started
     enabled: true
-  when: standby is defined
+  when: pg_standby is defined
 
 ...
